--- a/hello/assets/package.json
+++ b/hello/assets/package.json
@@ -7,8 +7,10 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "babel-preset-react": "^6.24.1",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
